# agent-skills

./: .gitignore  AGENTS.md  README.md  TODO.md  install.sh  port.sh  test.sh  uninstall.sh  validate.sh
skills/cmux-observability/: .gitignore  SKILL.glyph  SKILL.md  pyproject.toml
skills/cmux-observability/cmux_observability/: __init__.py  cli.py  config.py  errors.py  ingest.py  model.py  normalize.py  persist.py  redact.py  runstate.py  summarize_io.py
skills/cmux-observability/cmux_observability/collector/: classify.py  cmux.py  discovery.py  git.py
skills/cmux-observability/cmux_observability/render/: charts.js  render.py  style.css
skills/cmux-observability/cmux_observability/render/templates/: _agent_row.html.j2  _blocked.html.j2  _failures.html.j2  _history.html.j2  _productivity.html.j2  _themes.html.j2  _workspace.html.j2  snapshot.html.j2
skills/cmux-observability/tests/: conftest.py  test_capture_contract.py  test_classifier_integration.py  test_classify.py  test_cli.py  test_cli_finalize.py  test_cli_state_wiring.py  test_collector_cmux.py  test_collector_discovery.py  test_collector_git.py  test_identifier_strip.py  test_model.py  test_no_api_sdks.py  test_normalize.py  test_persist.py  test_redact.py  test_render.py  test_runstate.py  test_schema_migration.py  test_skill_packaging.py  test_state_classifier.py  test_summarize_io.py
skills/cmux-observability/tests/fixtures/: cmux_tree_basic.txt  redaction_secrets.txt
skills/cmux-observability/tests/fixtures/scrollback/: README.md  claude_code.txt  claude_code_idle__just_finished.txt  claude_code_idle__quiet.txt  claude_code_needs_input__direct_ask.txt  (+7 more)
(+209 files in other folders)
